new feature add

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/person
 spring.datasource.username=postgres
 spring.datasource.password=123
 
-
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+info.app.name=Spring boot Restful web services
+info.app.description=Spring boot Restful web services demo
+info.app.version=1.0.0
+management.endpoint.health.show-details=always
+management.endpoint.configprops.show-values=always
+management.endpoint.env.show-values=always
+management.endpoint.shutdown.enabled=true
