tls configuration add

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/person
 spring.datasource.username=postgres
@@ -14,3 +14,12 @@ management.endpoint.health.show-details=always
 management.endpoint.configprops.show-values=always
 management.endpoint.env.show-values=always
 management.endpoint.shutdown.enabled=true
+
+server.ssl.enabled=true
+server.port=443
+server.ssl.key-alias=muhandis
+server.ssl.key-password=rootroot
+server.ssl.key-store=classpath:muhandis.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store-password=rootroot
+
